System functions are set, all done, need to be added in real-use-terminal emulation

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </ul>
           <div class="hide-last-swipes-after">
             <span>This menu will hide after: </span>
-            <span id="hide-last-swipes-after">5</span>
+            <span id="hide-last-swipes-after"></span>
             <span> seconds</span>
           </div>
         </div>
@@ -88,7 +88,6 @@
           <br />
           Break
         </a>
-        <!--
         <a href="#" class="button">
           <i class="fa fa-suitcase"></i>
           <br />
@@ -99,12 +98,12 @@
           <br />
           outgo
         </a>
-      -->
       </div>
       <span class="info-text-inline">Automatic swipe logout in
-        <span>15</span>
+        <span class="logout-time-text"></span>
          sec.
       </span>
+      <a href="#" class="button-danger exit-button">Exit</a>
 
     </div>
 
