--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </body>
 <script>
   require('./renderer.js');
-  require('./js/functions.js');
+  //require('./js/functions.js');
   require('./index.js');
 </script>
 </html>
