--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
           </td>
           <td>
             <div class="code-activated primary">
-              <span>User: </span><span class="user">Patrik Predný</span>
+              <span>User: </span><span class="user"></span>
               <br />
-              <span>Code: </span><span class="key">000557889 RFID</span>
+              <span>Code: </span><span class="key"></span>
             </div>
           </td>
           <td>
             <div class="code-activated primary">
-              <span>User status: </span><span class="user-status">At work</span>
+              <span>User status: </span><span class="user-status"></span>
               <br />
-              <span>Hours: </span><span class="user-hours">66.24 Hours</span>
+              <span>Hours: </span><span class="user-hours"></span>
             </div>
           </td>
         </tr>
