working on wheater module

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           Break Return
         </a>
       </div>
-      <span class="info-text-inline">Automatic swipe logout in
+      <span class="info-text-inline">Auto user logout in
         <span class="logout-time-text"></span>
          sec.
       </span>
