added: weather auto start and repeating function, added favicon to windows/linux OS, functions.js to render.js, added new weathericons and added to switch

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Hodoor RasPi Terminal</title>
   <link rel="stylesheet" type="text/css" href="css/style.min.css" />
   <link rel="stylesheet" type="text/css" href="modules/fontawesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" type="text/css" href="css/weather-icons.min.css" />
+  <link rel="stylesheet" type="text/css" href="css/weather-icons-wind.min.css" />
 </head>
 <body>
 <div id="loader" class="loader"></div>
@@ -68,20 +70,20 @@
         </div>
       </div>
     </div>
-
+    <!---->
     <div class="subblock-center">
       <span class="info-text">Scan your code please...</span>
       <div class="weather-block">
-        <span class="icon"><i class='fa'></i></span>
-        <span class="text">Temp</span>
-        <span class="location">Region</span>
+        <span class="icon"><i class='wi wi-day-sunny'></i></span>
+        <span class="text"></span>
+        <span class="location">Loading weather info...</span>
       </div>
       <div class="info-block">
         <span class="time">15:48:05</span>
         <span class="date">Tue 21.03.2017</span>
       </div>
     </div>
-
+    <!---->
     <div class="subblock-center-buttons">
       <span class="info-text">Please select swipe type</span>
       <div class="button-block">
